<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="changeDebtViewModel"
            type="com.example.debtcontrol.changedebt.viewmodel.ChangeDebtViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".changedebt.ChangeDebtFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_close"
                app:title="@null"
                app:titleMarginStart="20dp"
                app:titleTextAppearance="@style/SettingsCustomTitle"
                tools:title="УМЕНЬШЕНИЕ ДОЛГА" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_8"
                    android:fontFamily="@font/bebas_neue_regular"
                    android:textColor="@color/soft_yellow"
                    android:textSize="@dimen/text_40"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currency"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:sum="@{changeDebtViewModel.debt}"
                    tools:text="15560" />

                <ImageView
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:importantForAccessibility="no"
                    app:currency="@{changeDebtViewModel.debt}"
                    app:layout_constraintBottom_toBottomOf="@id/sum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/sum"
                    tools:src="@drawable/ic__rub" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/sum_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_28"
            android:layout_marginEnd="@dimen/margin_24"
            android:hint="@string/sum_hint"
            android:inputType="number"
            android:maxLength="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/comment_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_24"
            android:hint="@string/comment_hint"
            android:inputType="textCapSentences"
            android:maxLength="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sum_input"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_4"
            android:fontFamily="@font/chenla_regular"
            android:text="@string/change_date_title"
            android:textColor="@color/very_light_gray_2"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintEnd_toEndOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/calendar" />

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintEnd_toStartOf="@+id/date"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/date" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_24"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/bebas_neue_regular"
            android:onClick="@{() -> changeDebtViewModel.startDatePikerDialog()}"
            android:text="@{String.valueOf(changeDebtViewModel.date)}"
            android:textAllCaps="true"
            android:textColor="@color/bright_orange"
            android:textSize="@dimen/text_32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/calendar"
            tools:text="16 сентября 2020" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>